--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>microservice-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.8.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
     <modules>
         <module>microservice-member</module>
         <module>microservice-member-api</module>
@@ -51,7 +58,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -109,10 +115,14 @@
                 <artifactId>kaptcha</artifactId>
                 <version>${kaptcha.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.jsfd</groupId>
                 <artifactId>microservice-global-core</artifactId>
+                <version>${system.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jsfd</groupId>
+                <artifactId>microservice-global-auth</artifactId>
                 <version>${system.version}</version>
             </dependency>
 
