--- a/microservice-global-auth/pom.xml
+++ b/microservice-global-auth/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.jsfd</groupId>
             <artifactId>microservice-global-core</artifactId>
-            <version>0.0.1</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
