--- a/microservice-global-gateway/pom.xml
+++ b/microservice-global-gateway/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jsfd</groupId>
     <artifactId>micro-service-global-gateway</artifactId>
 
     <properties>
@@ -73,32 +72,23 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.jsfd</groupId>
-            <artifactId>microservice-global-auth</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.jsfd</groupId>
-            <artifactId>microservice-member-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.lottery</groupId>
-            <artifactId>microservice-order-api</artifactId>
-        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>com.jsfd</groupId>
-            <artifactId>microservice-global-auth</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
             <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
     </dependencies>
     <build>
