--- a/microservice-global-gateway/pom.xml
+++ b/microservice-global-gateway/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.jsfd</groupId>
+            <artifactId>microservice-global-auth</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
