--- a/microservice-global-gateway/pom.xml
+++ b/microservice-global-gateway/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>microservice-global-auth</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jsfd</groupId>
+            <artifactId>microservice-member-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
