--- a/microservice-member-server/pom.xml
+++ b/microservice-member-server/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>microservice-global-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jsfd</groupId>
+            <artifactId>microservice-member-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
